infra/templates/dev/api.tpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goat-api
spec:
  replicas: ${API_REPLICAS}
  selector:
    matchLabels:
      app: goat-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: goat-api
    spec:
      containers:
        - image: ${DOCKER_IMAGE}
          imagePullPolicy: Always
          name: goat-api
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 4Gi
              cpu: 2
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 5000
            initialDelaySeconds: 10
            timeoutSeconds: 60
            periodSeconds: 120
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 5000
            initialDelaySeconds: 20
            timeoutSeconds: 60
            periodSeconds: 120
            failureThreshold: 3
          volumeMounts:
            - name: persistent-storage
              mountPath: /app/src/cache
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: pvc-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goat-worker
spec:
  replicas: ${WORKER_REPLICAS}
  selector:
    matchLabels:
      app: goat-worker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: goat-worker
    spec:
      containers:
        - image: ${DOCKER_IMAGE}
          command: 
            - "bash"
            - "-c"
            - |
              /etc/init.d/celeryd start
              sleep infinity
          imagePullPolicy: Always
          name: goat-worker
          volumeMounts:
            - name: persistent-storage
              mountPath: /app/src/cache
          resources:
            limits:
              memory: ${WORKER_MEMORY_LIMIT}Gi
              cpu: 2
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: pvc-api
---
apiVersion: v1
kind: Service
metadata:
  name: goat-api
spec:
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
  selector:
    app: goat-api
