infra/templates/dev/postgres.tpl.yaml
apiVersion: v1
kind: Service
metadata:  
  name: postgres-service
spec:
  type: ExternalName
  externalName:  ${POSTGRES_HOST}
