infra/templates/dev/rabbitmq.tpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goat-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goat-rabbitmq
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: goat-rabbitmq
    spec:
      hostname: goat-rabbitmq
      containers:
        - image: goatcommunity/rabbitmq:latest
          imagePullPolicy: Always
          name: goat-rabbitmq
          ports:
            - containerPort: 5672
            - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: goat-rabbitmq-service
spec:
  ports:
    - port: 5672
      name: amqp
      targetPort: 5672
    - port: 15672
      name: management
      targetPort: 15672
  type: NodePort
  selector:
    app: goat-rabbitmq
